# Proyecto-RAU-Backend

./: .env.example  .gitignore  Pipfile  README.md  app.yaml  pyproject.toml  rau_db_dump_postgres.sql  requirements.txt
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  comments.py  communities.py  onboarding.py  options.py  posts.py  users.py
app/core/: config.py  security.py
app/db/: database.py
app/infra/: seed.py
app/repositories/: __init__.py  base.py
app/repositories/memory/: comments_repo.py  communities_repo.py  posts_repo.py  users_repo.py
app/repositories/pg/: comments_repo_pg.py  communities_repo_pg.py  posts_repo_pg.py  users_repo_pg.py
app/schemas/: auth.py  comments.py  common.py  communities.py  onboarding.py  posts.py  users.py
app/services/: auth_service.py  communities_service.py  onboarding_service.py  options_service.py  posts_service.py  users_service.py
